tests/errors/semantics/cannot_use_labels_for_non_constant_func_calls.odl
main :: () -> void {
    add :: (a: int, b := 0, c := 0) -> int {
        return a + b + c;
    };

    myadd := add;
    s := myadd(a: 1, b: 1, c: 4);
    printint(s);
    println();
};
